--- a/app/src/main/res/layout/tab_training_qcm.xml
+++ b/app/src/main/res/layout/tab_training_qcm.xml
@@ -2,25 +2,44 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp">
+    android:paddingBottom="10dp">
 
 
-    <WebView
-        android:id="@+id/qcm_webview"
+    <RelativeLayout
+        android:id="@+id/qcm_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentStart="true" />
+        android:layout_height="match_parent">
+
+        <WebView
+            android:id="@+id/qcm_webview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="40dp" />
+
+        <Button
+            android:id="@+id/qcm_valid_button"
+            android:layout_width="180dp"
+            android:layout_height="30dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:background="@color/green"
+            android:text="terminer"
+            android:textColor="@color/white" />
+
+
+    </RelativeLayout>
 
     <TextView
         android:id="@+id/qcm_msg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
         android:text="@string/no_qcm"
-        android:textColor="@color/primary_light"
-        android:layout_centerInParent="true"/>
+        android:textColor="@color/primary_light" />
 
 </RelativeLayout>
