--- a/app/src/main/res/layout/activity_trainings.xml
+++ b/app/src/main/res/layout/activity_trainings.xml
@@ -16,10 +16,16 @@
         android:background="@color/gray_light">
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/training_recyclerview"
+            android:id="@+id/trainings_recyclerview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scrollbars="vertical" />
+
+        <ProgressBar
+            android:id="@+id/trainings_progressbar"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_centerInParent="true"/>
     </RelativeLayout>
 
 
