--- a/app/src/main/res/layout/alert_congrats.xml
+++ b/app/src/main/res/layout/alert_congrats.xml
@@ -14,7 +14,8 @@
             android:id="@+id/alert_icon"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:src="@mipmap/medal" />
 
     </RelativeLayout>
 
@@ -29,6 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="10dp"
+            android:text="@string/alert_congrats_title"
             android:textAppearance="@android:style/TextAppearance.Large"
             android:textColor="@color/primary_light"
             android:textStyle="bold" />
@@ -42,8 +44,21 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp"
             android:gravity="center"
+            android:text="@string/alert_congrats_message"
             android:textAppearance="@android:style/TextAppearance.Medium"
             android:textColor="@color/gray" />
+
+        <TextView
+            android:id="@+id/alert_formation_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/alert_message"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:textAppearance="@android:style/TextAppearance.Large"
+            android:textColor="@color/primary_light" />
 
     </RelativeLayout>
 
@@ -51,16 +66,31 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp">
+        android:layout_marginTop="30dp"
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/alert_button"
             android:layout_width="100dp"
             android:layout_height="40dp"
+            android:layout_alignParentLeft="true"
             android:layout_centerHorizontal="true"
             android:background="@color/primary_light"
-            android:text="Ok"
+            android:text="@string/alert_ok"
             android:textColor="@color/white" />
+
+        <Button
+            android:id="@+id/alert_share_button"
+            android:layout_width="100dp"
+            android:layout_height="40dp"
+
+            android:layout_alignParentRight="true"
+            android:layout_centerHorizontal="true"
+            android:background="@color/primary_light"
+            android:text="@string/alert_share"
+            android:textColor="@color/white" />
+
+
     </RelativeLayout>
 
 </LinearLayout>
